# xyz-protocol

./: README.md
XyzCpp/: README.md  meson.build
XyzCpp/include/: XyzClient.hpp  XyzKeyExchange.hpp  XyzMessage.hpp  XyzMessageBuilder.hpp  XyzMessageDecoder.hpp  XyzProxyTunnel.hpp  XyzServer.hpp  XyzUdpClient.hpp  XyzUtils.hpp
XyzCpp/src/: test_client.cpp  test_server.cpp  test_udp_client.cpp  test_udp_server.cpp
XyzJS [incomplete]/: XyzClient.js  XyzKeyExchange.js  XyzMessage.js  XyzMessageBuilder.js  XyzMessageDecoder.js  XyzServer.js  XyzUtils.js  main.js  notes.txt
XyzPython/: README.md  XyzClient.py  XyzKeyExchange.py  XyzMessage.py  XyzMessageBuilder.py  XyzMessageDecoder.py  XyzProxyTunnel.py  XyzServer.py  XyzUdpClient.py  XyzUtils.py  __init__.py  _diffie.py  requirements.txt
XyzSharp/: README.md  XyzClient.cs  XyzKeyExchange.cs  XyzMessage.cs  XyzMessageBuilder.cs  XyzMessageDecoder.cs  XyzProxyTunnel.cs  XyzServer.cs  XyzSession.cs  XyzUdpClient.cs  XyzUtils.cs
